[gd_scene load_steps=4 format=2]

[ext_resource path="res://tilemaps/basic_map.tres" type="TileSet" id=3]
[ext_resource path="res://scenarios/arena.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 10 )

[node name="arena" type="Node"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 40, 40 )
collision_layer = 5
collision_mask = 5
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 65536, 1, 0, 65553, 1, 0, 131072, 1, 0, 131089, 1, 0, 196608, 1, 0, 196625, 1, 0, 262144, 1, 0, 262161, 1, 0, 327680, 1, 0, 327697, 1, 0, 393216, 1, 0, 393233, 1, 0, 458752, 1, 0, 458769, 1, 0, 524288, 1, 0, 524305, 1, 0, 589824, 1, 0, 589841, 1, 0, 655360, 1, 0, 655377, 1, 0, 720896, 1, 0, 720913, 1, 0, 786432, 1, 0, 786449, 1, 0, 851968, 1, 0, 851985, 1, 0, 917504, 1, 0, 917521, 1, 0, 983040, 1, 0, 983057, 1, 0, 1048576, 1, 0, 1048593, 1, 0, 1114112, 1, 0, 1114129, 1, 0, 1179648, 1, 0, 1179665, 1, 0, 1245184, 1, 0, 1245201, 1, 0, 1310720, 1, 0, 1310737, 1, 0, 1376256, 1, 0, 1376273, 1, 0, 1441792, 1, 0, 1441809, 1, 0, 1507328, 1, 0, 1507345, 1, 0, 1572864, 1, 0, 1572881, 1, 0, 1638400, 1, 0, 1638417, 1, 0, 1703936, 1, 0, 1703953, 1, 0, 1769472, 1, 0, 1769489, 1, 0, 1835008, 1, 0, 1835025, 1, 0, 1900544, 1, 0, 1900561, 1, 0, 1966080, 1, 0, 1966097, 1, 0, 2031616, 1, 0, 2031617, 1, 0, 2031618, 1, 0, 2031619, 1, 0, 2031620, 1, 0, 2031621, 1, 0, 2031622, 1, 0, 2031623, 1, 0, 2031624, 1, 0, 2031625, 1, 0, 2031626, 1, 0, 2031627, 1, 0, 2031628, 1, 0, 2031629, 1, 0, 2031630, 1, 0, 2031631, 1, 0, 2031632, 1, 0, 2031633, 1, 0 )

[node name="playerPos" type="Position2D" parent="."]
position = Vector2( 360, 1180 )

[node name="opponentPos" type="Position2D" parent="."]
position = Vector2( 360, 100 )

[node name="spawnerPos" type="Node2D" parent="."]
position = Vector2( 364.104, 786.935 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 360, 640 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 360, 940 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D2"]

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 360, 340 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D3"]
